// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultItem render missing version and labels 1`] = `

<div>
  <div class="group relative">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="flex-col p-6 relative flex w-full max-w-full flex-wrap items-baseline justify-between gap-3 px-3 py-2 md:flex-row">
        <div class="flex flex-col flex-wrap items-baseline gap-3 md:flex-row">
          <button
            data-state="closed"
            class="grow cursor-default items-baseline justify-between overflow-hidden truncate text-left text-sm font-medium"
          >
            item
          </button>
        </div>
        <div class="flex flex-row flex-wrap items-center gap-3">
        </div>
        <div class="absolute -bottom-3.5 right-2.5 flex gap-2">
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render stacked many 1`] = `

<div>
  <div class="group relative">
    <div class="absolute left-2 top-2 h-full w-[97.5%] rounded-lg border bg-card transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <div class="absolute left-1 top-1 h-full w-[99%] rounded-lg border bg-card transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="flex-col p-6 relative flex w-full max-w-full flex-wrap items-baseline justify-between gap-3 px-3 py-2 md:flex-row">
        <div class="flex flex-col flex-wrap items-baseline gap-3 md:flex-row">
          <div
            class="group h-[30px] font-courier relative z-[1] w-fit flex cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800 md:-ml-1"
            data-state="closed"
          >
            <span class="pt-0.5">
              1.1.1
            </span>
          </div>
          <button
            data-state="closed"
            class="grow cursor-default items-baseline justify-between overflow-hidden truncate text-left text-sm font-medium"
          >
            many-edges-stacked
          </button>
        </div>
        <div class="flex flex-row flex-wrap items-center gap-3">
        </div>
        <div class="absolute -bottom-3.5 right-2.5 flex gap-2">
          <div>
            <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-fuchsia-100 dark:bg-fuchsia-950 border-[1px] border-fuchsia-500 dark:border-fuchsia-500">
              <span class="text-xs font-medium inline-flex items-center justify-center text-fuchsia-800 dark:text-fuchsia-400">
                peer
              </span>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render stacked two 1`] = `

<div>
  <div class="group relative">
    <div class="absolute left-1 top-1 h-full w-[99%] rounded-lg border bg-card transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
    </div>
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="flex-col p-6 relative flex w-full max-w-full flex-wrap items-baseline justify-between gap-3 px-3 py-2 md:flex-row">
        <div class="flex flex-col flex-wrap items-baseline gap-3 md:flex-row">
          <div
            class="group h-[30px] font-courier relative z-[1] w-fit flex cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800 md:-ml-1"
            data-state="closed"
          >
            <span class="pt-0.5">
              1.0.0
            </span>
          </div>
          <button
            data-state="closed"
            class="grow cursor-default items-baseline justify-between overflow-hidden truncate text-left text-sm font-medium"
          >
            two-edges-stacked
          </button>
        </div>
        <div class="flex flex-row flex-wrap items-center gap-3">
        </div>
        <div class="absolute -bottom-3.5 right-2.5 flex gap-2">
          <div>
            <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-orange-200 dark:bg-orange-950 border-[1px] border-orange-500 dark:border-orange-500">
              <span class="text-xs font-medium inline-flex items-center justify-center text-orange-700 dark:text-orange-500">
                dev
              </span>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render with item 1`] = `

<div>
  <div class="group relative">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="flex-col p-6 relative flex w-full max-w-full flex-wrap items-baseline justify-between gap-3 px-3 py-2 md:flex-row">
        <div class="flex flex-col flex-wrap items-baseline gap-3 md:flex-row">
          <div
            class="group h-[30px] font-courier relative z-[1] w-fit flex cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800 md:-ml-1"
            data-state="closed"
          >
            <span class="pt-0.5">
              1.0.0
            </span>
          </div>
          <button
            data-state="closed"
            class="grow cursor-default items-baseline justify-between overflow-hidden truncate text-left text-sm font-medium"
          >
            item
          </button>
        </div>
        <div class="flex flex-row flex-wrap items-center gap-3">
        </div>
        <div class="absolute -bottom-3.5 right-2.5 flex gap-2">
          <div>
            <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-blue-200 dark:bg-blue-950 border-[1px] border-blue-500 dark:border-blue-500">
              <span class="text-xs font-medium inline-flex items-center justify-center text-blue-700 dark:text-blue-400">
                prod
              </span>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;

exports[`ResultItem render with type 1`] = `

<div>
  <div class="group relative">
    <a
      href="#"
      class="block rounded-lg border bg-card text-card-foreground shadow-sm duration-250 relative cursor-default transition-colors group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
    >
      <div class="flex-col p-6 relative flex w-full max-w-full flex-wrap items-baseline justify-between gap-3 px-3 py-2 md:flex-row">
        <div class="flex flex-col flex-wrap items-baseline gap-3 md:flex-row">
          <div
            class="group h-[30px] font-courier relative z-[1] w-fit flex cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800 md:-ml-1"
            data-state="closed"
          >
            <span class="pt-0.5">
              1.0.0
            </span>
          </div>
          <button
            data-state="closed"
            class="grow cursor-default items-baseline justify-between overflow-hidden truncate text-left text-sm font-medium"
          >
            item
          </button>
        </div>
        <div class="flex flex-row flex-wrap items-center gap-3">
          <div class="group font-sans h-[30px] relative z-[1] w-fit flex cursor-default items-center justify-center gap-1.5 rounded border-[1px] border-neutral-200 bg-neutral-100 px-2 py-1 text-[0.75rem] font-medium text-muted-foreground dark:border-[#313131] dark:bg-neutral-800">
            <span
              data-id="info-badge-value"
              class="tabular-nums after:border-[var(--light-border)] pt-0.5 font-courier relative ml-[0.125rem] mr-[calc(var(--width-offset)/2)] tracking-wide text-neutral-700 after:absolute after:-left-[calc(var(--width-offset)/2)] after:-top-[calc(var(--height-offset)/2)] after:z-[-1] after:h-[calc(100%+var(--height-offset))] after:w-[calc(100%+var(--width-offset))] after:rounded-[calc(0.25rem-1px)] after:border-[1px] after:bg-[var(--light-background)] after:content-[&quot;&quot;] group-has-[span[data-id=info-badge-icon]]:ml-[calc(var(--width-offset)/2)] dark:text-foreground dark:after:border-[var(--dark-border)] dark:after:bg-[var(--dark-background)] lowercase"
              style="--width-offset: 1rem; --height-offset: 0.25rem; --dark-background: #0F0F0F; --dark-border: #2A2A2A; --light-background: #FFFFFF; --light-border: #E4E4E7;"
            >
              prod
            </span>
            <span class="flex items-center justify-center">
              dep of: npm:from@1.0.0
            </span>
          </div>
        </div>
        <div class="absolute -bottom-3.5 right-2.5 flex gap-2">
          <div>
            <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-blue-200 dark:bg-blue-950 border-[1px] border-blue-500 dark:border-blue-500">
              <span class="text-xs font-medium inline-flex items-center justify-center text-blue-700 dark:text-blue-400">
                prod
              </span>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>

`;
